remove minor errors